--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>TS React</title>
+
+        <title>BasicButtons Material Demo</title>
+        <!-- Fonts to support Material Design -->
+        <link
+          rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+        />
+        <!-- Icons to support Material Design -->
+        <link
+          rel="stylesheet"
+          href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        />
+        
     </head>
     <body>
         <section id="root"></section>
